// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-lingui-extract-messages should extract JS translations only once inside React components 1`] = `
Object {
  Test: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/with-react.js,
        3,
      ],
    ],
  },
}
`;

exports[`babel-plugin-lingui-extract-messages should extract all messages from JS files (integration) 1`] = `
Object {
  msg.hello: Object {
    description: null,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/integration.js,
        null,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/integration.js,
        null,
      ],
    ],
  },
}
`;

exports[`babel-plugin-lingui-extract-messages should extract all messages from JS files (macros) 1`] = `
Object {
  Message: Object {
    description: null,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/macro.js,
        1,
      ],
    ],
  },
  Message With Description: Object {
    description: description,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/macro.js,
        5,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/macro.js,
        21,
      ],
    ],
  },
  Message With {param}: Object {
    description: null,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/macro.js,
        14,
      ],
    ],
  },
  msg.id: Object {
    defaults: Message With Description,
    description: null,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/macro.js,
        9,
      ],
    ],
  },
}
`;

exports[`babel-plugin-lingui-extract-messages should extract all messages from JS files 1`] = `
Object {
  msg.default: Object {
    defaults: Hello World,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/all.js,
        5,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/all.js,
        6,
      ],
    ],
  },
  msg.hello: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/all.js,
        4,
      ],
    ],
  },
  {count, plural, one {# book} other {# books}}: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/js/all.js,
        7,
      ],
    ],
  },
}
`;

exports[`babel-plugin-lingui-extract-messages should extract all messages from JSX files (integration) 1`] = `
Object {
  Hi, my name is {name}: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/integration.js,
        null,
      ],
    ],
  },
  Title: Object {
    description: null,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/integration.js,
        null,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/integration.js,
        null,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/integration.js,
        null,
      ],
    ],
  },
  {count, plural, one {# book} other {# books}}: Object {
    description: null,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/integration.js,
        null,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/integration.js,
        null,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/integration.js,
        null,
      ],
    ],
  },
}
`;

exports[`babel-plugin-lingui-extract-messages should extract all messages from JSX files 1`] = `
Object {
  Hi, my name is <0>{name}</0>: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/all.js,
        9,
      ],
    ],
  },
  msg.default: Object {
    defaults: Hello World,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/all.js,
        7,
      ],
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/all.js,
        8,
      ],
    ],
  },
  msg.hello: Object {
    description: Description,
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/all.js,
        6,
      ],
    ],
  },
  {count, plural, one {# book} other {# books}}: Object {
    origin: Array [
      Array [
        packages/babel-plugin-extract-messages/test/fixtures/jsx/all.js,
        10,
      ],
    ],
  },
}
`;
